--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>이선호 돌잔치에 초대합니다.</title>
 <link rel="stylesheet" type="text/css" href="./files/swiper.min.css">
+<link rel="stylesheet" type="text/css" href="./files/jejuhallasan.css">
 <link rel="stylesheet" type="text/css" href="./files/style.css">
 <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
 .en-markup-crop-options {
@@ -17,7 +18,7 @@
     border-radius: 4px !important;
 }
 
-.en-markup-crop-options div div:first-of-type {
+.en-markup-crop-options div div:first-of-type{ 
     margin-left: 0px !important;
 }
 </style></head>
