--- a/index.html
+++ b/index.html
@@ -206,9 +206,12 @@
 <div id="footer">Copyright (c) 2024 LTS &amp; KMJ All rights reserved.</div>
 <!-- //footer -->
 
-<script src="./files/jquery.min.js"></script>
-<script src="./files/bootstrap.min.js"></script>
-<script src="./files/swiper.min.js"></script>
+<!-- <script src="./files/jquery.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
+<!-- <script src="./files/bootstrap.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<!-- <script src="./files/swiper.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 <script src="./files/kakao.min.js"></script>
 <script>
 	var swiper = new Swiper('.swiper-container', {
