--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 </style></head>
 <data-spy="scroll" data-target="#myScrollspy">
 
-<h1 class="hide">이태성, 김미정 : 저희 결혼합니다.</h1>
 <!-- header -->
 <div id="myScrollspy" class="scrollspy">
 	<ul class="nav affix" data-spy="affix">
-		<li class="active"><a href="#section-1">홈</a></li>
-		<li><a href="#section-2">모시는 글</a></li>
+		<li class="active"><a href="#" onclick="window.scrollTo(0, 0)">홈</a></li>
+		<li><a href="#section-2">초대장</a></li>
 		<li><a href="#section-3">오시는 길</a></li>
 	</ul>
 </div>
@@ -37,92 +36,93 @@
 
 <div class="top-offset"></div>
 
-<div id="section-1" class="wrap-section-1">
-	<h2 class="text-center pt30 font-10">이선호 첫 생일 잔치</h2>
+<div id="section-1">
+	<h2 class="text-center pt30 font-10">제 생일 잔치에<br>와주실 거죠?</h2>
 
-	<!-- main image -->
-	<div class="img-main">
-		<img src="./files/img-main.png" width="100%" alt="첫 생일파티에 초대해요">
-	</div>
-	<!-- //main image -->
 	<!-- Slide -->
+	<div class="mt20"></div>
 	<div class="swiper-container swiper-container-horizontal">
 		<div class="swiper-wrapper">
-			<div class="swiper-slide swiper-slide-active" style="width: 1318px;">
-				<img src="./files/1.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_9012-COLLAGE.jpg" width="100%">
 			</div>
-			<div class="swiper-slide swiper-slide-next" style="width: 1318px;">
-				<img src="./files/2.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240117_123234.jpg" width="100%">
 			</div>
-			<div class="swiper-slide" style="width: 1318px;">
-				<img src="./files/3.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240120_085142.jpg" width="100%">
 			</div>
-			<div class="swiper-slide" style="width: 1318px;">
-				<img src="./files/4.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240203_101400.jpg" width="100%">
 			</div>
-			<div class="swiper-slide" style="width: 1318px;">
-				<img src="./files/5.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240217_145521.jpg" width="100%">
 			</div>
-			<div class="swiper-slide" style="width: 1318px;">
-				<img src="./files/6.png" width="100%">
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240217_145755.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240221_160331.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240223_125337.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/20240223_154340.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_1441.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_1614-ANIMATION.gif" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_1699.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_1725.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_1933.jpg" width="100%">
+			</div>
+
+			<div class="swiper-slide swiper-slide-active">
+				<img src="./files/pictures/IMG_2114.jpg" width="100%">
 			</div>
 		</div>
-		<div class="swiper-pagination swiper-pagination-clickable">
-			<span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span>
-			<span class="swiper-pagination-bullet"></span>
-			<span class="swiper-pagination-bullet"></span>
-			<span class="swiper-pagination-bullet"></span>
-			<span class="swiper-pagination-bullet"></span>
-			<span class="swiper-pagination-bullet"></span>
-		</div>
+		<div class="swiper-pagination"></div>
+		<div class="swiper-button-next"></div>
+      	<div class="swiper-button-prev"></div>
 	</div>
 	<!-- //Slide -->
 </div>
+
 <!-- 모시는글 -->
-<style>
-.center-wrapper {
-	display: grid;
-	align-items: center;
-	justify-content: center;
-	-height: 100vh; /* Adjusted to center vertically */
-	padding: 25px 0 40px;
-	background: url(../files/bg-pattern.png) repeat;
-    -webkit-background-size: 15px auto;
-    background-size: 15px auto;
-}
-.circle-container {
-	margin: auto;
-	width: 100px;
-	height: 100px;
-	background-color: #f17383;
-	border-radius: 50%;
-	display: flex;
-	flex-direction: column; /* Arrange content in a column */
-	align-items: center;
-	justify-content: center;
-	color: white;
-	font-weight: bold;
-}
-.circle-container-contents {
-	display: flow;
-	align-items: center;
-	justify-content: center;
-	font-weight: bold;
-}
-.additional-content {
-  margin-top: 20px; /* Adjust the margin as needed */
-  text-align: center;
-}
-.additional-content p {
-  margin-top: 6px; /* Adjust the margin as needed */
-}
-</style>
 <div id="section-2" class="center-wrapper">
+	<div class="mt30"></div>
+
 	<div class="circle-container">
-		모시는 글
+		초대장
 	</div>
 	<div class="additional-content">
-		이태성 김미정의 아들 이선호의 돌잔치에 초대합니다.
+		제 돌잔치에 초대합니다.<br>
+		벌써 365일이나 먹었다니..<br>
+		믿기지 않아요<br>
+		오셔서 제 관상 한번 봐주세요<br>
 	</div>
 
 	<div class="additional-content">
@@ -131,59 +131,51 @@
 	</div>
 </div>
 <!-- //모시는글 -->
-<!-- 오시는길 -->
-<style>
 
-</style>
-<div id="section-3" class="center-wrapper" style="background-color: #FFF;">
-	<div class="circle-container" style="background-color: #679bd8;">
+<!-- 오시는길 -->
+<div id="section-3" class="center-wrapper">
+	<div class="mt30"></div>
+
+	<div class="circle-container">
 		오시는 길
 	</div>
 	<div class="additional-content">
 		<p><img src="./files/way_to_come.png"></p>
-		<p>서울 구로구 경인로 662 디큐브시티 현대백화점 6층 (신도림역 1번 출구)</p>
+		<p>서울 구로구 경인로 662 디큐브시티 현대백화점 6층</p>
+		<p>경복궁 디큐브점</p>
 		<p>TEL. <a href="tel:0226344433">02-2634-4433</a></p>
 		<p>
 			<a href="https://naver.me/5kLXLNpq" class="btn-naver-map" target="_blank">
-				<img src="./files/btn-naver.png" width="160" height="37">
+				<img src="./files/icon-naver-map.png"> 네이버 지도보기
 			</a>
 		</p>
 		<p>
 			<a id="kakao-link-btn" class="btn-kakao" href="javascript:;">
-				<img src="./files/btn-kakao.png" width="160" height="37">
+				<img src="./files/kakaotalk_sharing_btn_medium.png"> &nbsp;&nbsp;&nbsp;카카오톡 공유
 			</a>
 		</p>
 	</div>
 </div>
 
+<div class="mt60"></div>
+
 <!-- 아빠 엄마 소개 -->
-<style>
-.thumb img {
-	width: 100px;
-}
-.profile-container {
-	display: flex;
-	width: 100%;
-	margin-top: 20px;
-}
-.profile-container .profile-left {
-	flex: 1;
-}
-.profile-container .profile-right {
-	flex: 2;
-	padding: 0 0 0 20px;
-}
-</style>
 <div class="couple-intro">
 	<div class="inner">
+		<div class="mt30"></div>
+
+		<div class="circle-container">
+			비상시 눌러주세요
+		</div>
+
 		<a href="tel:01020406666" class="thumb" style="margin-top: 0">
 			<div class="profile-container">
 				<div class="profile-left">
 					<img src="./files/dad.png" alt="아빠 이태성 01020406666">
 				</div>
-				<div class="profile-right pt30">
+				<div class="profile-right pt20">
 					<p class="text-bold text-blue font-20">아빠</p>
-					<p class="mt10">이태성 010-2040-6666</p>
+					<p class="mt10">010-2040-6666</p>
 				</div>
 			</div>
 		</a>
@@ -193,18 +185,27 @@
 				<div class="profile-left">
 					<img src="./files/mom.jpg" alt="엄마 김미정 01067221728">
 				</div>
-				<div class="profile-right pt30">
+				<div class="profile-right pt20">
 					<p class="text-bold text-pink font-20">엄마</p>
-					<p class="mt10">김미정 010-6722-1728</p>
+					<p class="mt10">010-6722-1728</p>
 				</div>
 			</div>
 		</a>
 	</div>
 </div>
 <!-- //아빠 엄마 소개 -->
+
+<div class="mt30"></div>
+
 <!-- footer -->
 <div id="footer">Copyright (c) 2024 LTS &amp; KMJ All rights reserved.</div>
 <!-- //footer -->
+
+
+
+
+
+
 
 <!-- <script src="./files/jquery.min.js"></script> -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
@@ -212,28 +213,42 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- <script src="./files/swiper.min.js"></script> -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script src="./files/kakao.min.js"></script>
+<script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
+  integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8" crossorigin="anonymous"></script>
 <script>
 	var swiper = new Swiper('.swiper-container', {
-		pagination: '.swiper-pagination',
-		paginationClickable: true
+		pagination: {
+			el: '.swiper-pagination',
+			clickable: true
+		},
+		navigation: {
+			nextEl: '.swiper-button-next',
+			prevEl: '.swiper-button-prev'
+		},
+		// centeredSlides: true,
+		slidesPerView: 2,
+		autoplay: {
+			delay: 2500,
+			disableOnInteraction: false,
+			loop: true
+		}
 	});
 
-
-	Kakao.init('0da15aafb836b3b698981519598c0897');
+	Kakao.init('e851273b0118339703fdc6272d31e046');
 	// 카카오톡 링크 버튼을 생성합니다. 처음 한번만 호출하면 됩니다.
-    Kakao.Link.createTalkLinkButton({
-      container: '#kakao-link-btn',
-      label: '이태성, 김미정의 결혼식에 초대합니다.',
-      image: {
-        src: 'http://marry.youniforever.com/files/kakao-main.png',
-        width: '680',
-        height: '680'
-      },
-      webButton: {
-        text: '봄날의 결혼식',
-        url: 'http://marry.youniforever.com' // 앱 설정의 웹 플랫폼에 등록한 도메인의 URL이어야 합니다.
-      }
+    Kakao.Share.createDefaultButton({
+		container: '#kakao-link-btn',
+		objectType: 'feed',
+		content: {
+			title: '선호 생일잔치에 초대합니다',
+			description: '#생일 #돌잔치 #선호찡 #축하',
+			imageUrl: 'https://youniforever.github.io/1st_birth/files/kakao-main.png',
+			link: {
+				// [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
+				mobileWebUrl: 'https://youniforever.github.io',
+				webUrl: 'https://youniforever.github.io',
+			},
+		}
     });
 </script>
 </body></html>
