--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
 			imageUrl: 'https://youniforever.github.io/1st_birth/files/kakao-main.png',
 			link: {
 				// [내 애플리케이션] > [플랫폼] 에서 등록한 사이트 도메인과 일치해야 함
-				mobileWebUrl: 'https://youniforever.github.io',
-				webUrl: 'https://youniforever.github.io',
+				mobileWebUrl: 'https://youniforever.github.io/1st_birth',
+				webUrl: 'https://youniforever.github.io/1st_birth',
 			},
 		}
     });
