--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		오시는 길
 	</div>
 	<div class="additional-content">
-		<p><img src="./files/way_to_come.png"></p>
+		<p><img src="./files/way_to_come.png" width="90%"></p>
 		<p>서울 구로구 경인로 662 디큐브시티 현대백화점 6층</p>
 		<p>경복궁 디큐브점</p>
 		<p>TEL. <a href="tel:0226344433">02-2634-4433</a></p>
