--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		<div class="mt30"></div>
 
 		<div class="circle-container">
-			비상시 눌러주세요
+			연락주세요
 		</div>
 
 		<a href="tel:01020406666" class="thumb" style="margin-top: 0">
