--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	<!-- //Slide -->
 </div>
 
-<!-- 모시는글 -->
+<!-- 초대장 -->
 <div id="section-2" class="center-wrapper">
 	<div class="mt30"></div>
 
@@ -130,7 +130,7 @@
 		<p>경복궁 디큐브시티점</p>
 	</div>
 </div>
-<!-- //모시는글 -->
+<!-- //초대장 -->
 
 <!-- 오시는길 -->
 <div id="section-3" class="center-wrapper">
@@ -140,7 +140,11 @@
 		오시는 길
 	</div>
 	<div class="additional-content">
-		<p><img src="./files/way_to_come.png" width="90%"></p>
+		<p>
+			<a href="https://naver.me/5kLXLNpq" class="btn-naver-map" target="_blank">
+				<img src="./files/way_to_come.png" width="90%">
+			</a>
+		</p>
 		<p>서울 구로구 경인로 662 디큐브시티<br>현대백화점 6층</p>
 		<p>경복궁 디큐브점</p>
 		<p>TEL. <a href="tel:0226344433">02-2634-4433</a></p>
