--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
   integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8" crossorigin="anonymous"></script>
 <script>
 	var swiper = new Swiper('.swiper-container', {
+		lazy: true,
 		pagination: {
 			el: '.swiper-pagination',
 			clickable: true
