--- a/index.html
+++ b/index.html
@@ -45,63 +45,63 @@
 		<div class="swiper-wrapper">
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_9012-COLLAGE.jpg" width="100%">
+				<img src="./files/pictures/IMG_9012-COLLAGE.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240117_123234.jpg" width="100%">
+				<img src="./files/pictures/20240117_123234.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240120_085142.jpg" width="100%">
+				<img src="./files/pictures/20240120_085142.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240203_101400.jpg" width="100%">
+				<img src="./files/pictures/20240203_101400.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240217_145521.jpg" width="100%">
+				<img src="./files/pictures/20240217_145521.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240217_145755.jpg" width="100%">
+				<img src="./files/pictures/20240217_145755.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240221_160331.jpg" width="100%">
+				<img src="./files/pictures/20240221_160331.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240223_125337.jpg" width="100%">
+				<img src="./files/pictures/20240223_125337.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240223_154340.jpg" width="100%">
+				<img src="./files/pictures/20240223_154340.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1441.jpg" width="100%">
+				<img src="./files/pictures/IMG_1441.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1614-ANIMATION.gif" width="100%">
+				<img src="./files/pictures/IMG_1614-ANIMATION.gif" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1699.jpg" width="100%">
+				<img src="./files/pictures/IMG_1699.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1725.jpg" width="100%">
+				<img src="./files/pictures/IMG_1725.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1933.jpg" width="100%">
+				<img src="./files/pictures/IMG_1933.jpg" width="100%" loading="lazy">
 			</div>
 
 			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_2114.jpg" width="100%">
+				<img src="./files/pictures/IMG_2114.jpg" width="100%" loading="lazy">
 			</div>
 		</div>
 		<div class="swiper-pagination"></div>
