--- a/index.html
+++ b/index.html
@@ -42,71 +42,10 @@
 	<!-- Slide -->
 	<div class="mt20"></div>
 	<div class="swiper-container swiper-container-horizontal">
-		<div class="swiper-wrapper">
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_9012-COLLAGE.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240117_123234.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240120_085142.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240203_101400.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240217_145521.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240217_145755.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240221_160331.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240223_125337.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/20240223_154340.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1441.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1614-ANIMATION.gif" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1699.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1725.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_1933.jpg" width="100%" loading="lazy">
-			</div>
-
-			<div class="swiper-slide swiper-slide-active">
-				<img src="./files/pictures/IMG_2114.jpg" width="100%" loading="lazy">
-			</div>
-		</div>
+		<div class="swiper-wrapper"></div>
 		<div class="swiper-pagination"></div>
-		<div class="swiper-button-next"></div>
-      	<div class="swiper-button-prev"></div>
+		<!-- <div class="swiper-button-next"></div>
+      	<div class="swiper-button-prev"></div> -->
 	</div>
 	<!-- //Slide -->
 </div>
@@ -220,6 +159,22 @@
 <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.6.0/kakao.min.js"
   integrity="sha384-6MFdIr0zOira1CHQkedUqJVql0YtcZA1P0nbPrQYJXVJZUkTk/oX4U9GhUIs3/z8" crossorigin="anonymous"></script>
 <script>
+	for (i = 1; i <= 21; i ++) {
+		var fileName = '';
+		if (String(i).length == 1) {
+			fileName = '0' + i;
+		} else {
+			fileName = String(i);
+		}
+		fileName = fileName + '.png';
+
+		var append = [];
+		append.push('<div class="swiper-slide swiper-slide-active">');
+		append.push('<img src="./files/pics/' + fileName + '" width="100%" loading="lazy">');
+		append.push('</div>');
+		$('.swiper-wrapper').append(append.join(''));
+	}
+
 	var swiper = new Swiper('.swiper-container', {
 		lazy: true,
 		pagination: {
