--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 		} else {
 			fileName = String(i);
 		}
-		fileName = fileName + '.png';
+		fileName = fileName + '.jpg';
 
 		var append = [];
 		append.push('<div class="swiper-slide swiper-slide-active">');
